@@ -45,6 +45,43 @@ public class NoPurge extends StdCommand
 		return access;
 	}
 
+	private int checkExisting(final String protectMe)
+	{
+		final List<String> protectedOnes=Resources.getFileLineVector(Resources.getFileResource("protectedplayers.ini",false));
+		if((protectedOnes!=null)&&(protectedOnes.size()>0))
+		{
+			for(int b=0;b<protectedOnes.size();b++)
+			{
+				final String B=protectedOnes.get(b);
+				if(B.equalsIgnoreCase(protectMe))
+					return b;
+			}
+		}
+		return -1;
+	}
+
+	private void reallyProtect(final String protectMe)
+	{
+		final StringBuffer str=Resources.getFileResource("protectedplayers.ini",false);
+		if(protectMe.trim().length()>0)
+			str.append(protectMe+"\n");
+		Resources.updateFileResource("::protectedplayers.ini",str);
+	}
+
+	private void unProtect(final String protectMe)
+	{
+		final StringBuffer str=Resources.getFileResource("protectedplayers.ini",false);
+		if(str.toString().startsWith(protectMe+"\n"))
+			str.delete(0, protectMe.length()+1);
+		else
+		{
+			final int x=str.indexOf("\n"+protectMe+"\n");
+			if(x>0)
+				str.delete(x, protectMe.length()+1);
+		}
+		Resources.updateFileResource("::protectedplayers.ini",str);
+	}
+
 	@Override
 	public boolean execute(final MOB mob, final List<String> commands, final int metaFlags)
 		throws java.io.IOException
@@ -63,23 +100,41 @@ public class NoPurge extends StdCommand
 			mob.tell(L("Protect whom?  '@x1' is not a known player.",protectMe));
 			return false;
 		}
-		final List<String> protectedOnes=Resources.getFileLineVector(Resources.getFileResource("protectedplayers.ini",false));
-		if((protectedOnes!=null)&&(protectedOnes.size()>0))
-		for(int b=0;b<protectedOnes.size();b++)
+		final int existingIndex = checkExisting(protectMe);
+		if(existingIndex >= 0)
 		{
-			final String B=protectedOnes.get(b);
-			if(B.equalsIgnoreCase(protectMe))
-			{
-				mob.tell(L("That player already protected.  Do LIST NOPURGE and check out #@x1.",""+(b+1)));
-				return false;
-			}
+			if(mob.Name().equalsIgnoreCase(protectMe))
+				mob.tell(L("You are already protected.  Do LIST NOPURGE and check out #@x1.",""+(existingIndex+1)));
+			else
+				mob.tell(L("That player already protected.  Do LIST NOPURGE and check out #@x1.",""+(existingIndex+1)));
+			return false;
 		}
-		mob.tell(L("The player '@x1' is now protected from autopurge.",protectMe));
-		final StringBuffer str=Resources.getFileResource("protectedplayers.ini",false);
-		if(protectMe.trim().length()>0)
-			str.append(protectMe+"\n");
-		Resources.updateFileResource("::protectedplayers.ini",str);
+		this.reallyProtect(protectMe);
+		if(mob.Name().equalsIgnoreCase(protectMe))
+			mob.tell(L("You are now protected from autopurge."));
+		else
+			mob.tell(L("The player '@x1' is now protected from autopurge.",protectMe));
 		return false;
+	}
+
+	@Override
+	public Object executeInternal(final MOB mob, final int metaFlags, final Object... args) throws java.io.IOException
+	{
+		if((args.length==0)||(!(args[0] instanceof MOB)))
+			return Boolean.FALSE;
+		if((metaFlags & MUDCmdProcessor.METAFLAG_REVERSED) == MUDCmdProcessor.METAFLAG_REVERSED)
+		{
+			if(this.checkExisting(((MOB)args[0]).Name())<0)
+				return Boolean.FALSE;
+			this.unProtect(((MOB)args[0]).Name());
+		}
+		else
+		{
+			if(this.checkExisting(((MOB)args[0]).Name())>=0)
+				return Boolean.FALSE;
+			this.reallyProtect(((MOB)args[0]).Name());
+		}
+		return Boolean.TRUE;
 	}
 
 	@Override
