@@ -41,6 +41,7 @@
 #       with key=value parameters in them.  Keys include AUTOGAIN only.
 #       Example: 7 VEXING1
 #       Example: 12 VEXING1(autogain=false)
+#     * protection from purging.  Example: 1 NOPURGE
 # Note the spaces and use of quotes!
 # [DISPLAY] is a friendly display name of this achievement.
 # [EVENT] is the type of achievement event.  Each type determines the other
